--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "license": "UNLICENSED",
   "private": true,
   "engines": {
-    "node": ">=4.0.0"
+    "node": "7.0.0"
   },
   "scripts": {
-    "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash",
     "start": "nodemon --ignore node_modules shortly.js",
     "start:es6": "nodemon --exec node-babel --ignore node_modules shortly.js",
     "test": "node shortly.js & mocha --bail --reporter nyan test/ServerSpec.js; pkill -n node;",
